2011-03-04  Per Bothner  <per@bothner.com>

	* Scope.java (noteStartFunction): Don't call setTypes on start address,
	as setStartPC calls define, which calls setTypes anyway.

	* Label.java (mergeLocalType): Check length of old localTypes array.
	This fixes Savannah bug #32656 "ArrayIndexOutOfBoundsException in
	mergeLocalType".

	* Label.java (setTypes): If the new local variable array is shorter
	than the old one, call mergeLocalType so notifyTypeChangeListeners
	gets called.
	This fixes Savannah bug #32657 "Verification error with JDK7".

2011-03-02  Per Bothner  <per@bothner.com>

	* ObjectType.java (getContextClassLoader): Remove special hack for
	getting system ClassLoader (rather than context ClassLoader) on Android
	- it causes problems with newer versions of Android and isn't needed.
	It's unclear if the hack is still needed for older Android versions.

2011-01-07  Per Bothner  <per@bothner.com>

	* AnnotationEntry.java (print): Don't print initial identation
	or final newline here.
	* RuntimeAnnotationsAttr.java (print): Do it here instead.
	* AnnotationEntry.java (Value.print): Thus we can avoid excess
	whitespace when printing nested annotation values.

	* ClassType.java (isFinal, isAnnotation): New convenience methods.
	(compare): More precide results when comparing annotation type
	or final class versus interface.

2011-01-06  Per Bothner  <per@bothner.com>

	* PrimType.java (boxedType): Handle voidType.

2011-01-03  Per Bothner  <per@bothner.com>

	* ClassType.java (getDefaultConstructor): New method.

2010-12-26  Per Bothner  <per@bothner.com>

	* RuntimeAnnotationsAttr.java (maybeAddAnnotation): New method.
	* AnnotationEntry.java (getRetention, hasTarget): New methods.

2010-12-01  Per Bothner  <per@bothner.com>

	* AnnotationEntry.java: Also implement
	java.lang.reflect.InvocationHandler.
	(invoke): New method.
	(Value.getValue, Value.print): Add/fix support for enums and arrays.
	* RuntimeAnnotationsAttr.java (getAnnotationsAttr, addAnnotation,